fixed mission statement to have a dark mode on there

--- a/prove/mission/mission-css.css
+++ b/prove/mission/mission-css.css
@@ -6,6 +6,15 @@ body {
     font-size: 1em;
 }
 
+.dark {
+    background-color: black;
+    color: white;
+}
+
+.dark h2 {
+    color: rgb(160, 212, 237);
+}
+
 #content {
     max-width: 60%;
     margin: 40px auto;
